[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-pentest"
version = "0.1.0"
description = "Automated red-team / pentest harness for OpenAI-compatible agentic APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ATKPOC" }]
dependencies = [
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20.2",
    "ruff>=0.5.0",
]

[project.scripts]
agent-pentest = "agent_pentest.__main__:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_pentest*"]

[tool.setuptools.package-data]
agent_pentest = ["seeds/*.yaml", "seeds/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
